# python-llms-wrapper

./: .gitignore  README.md  conda-create.sourceme  example-config-ollama.hjson  example-config.hjson  example-config1.hjson  gendoc.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-api.ipynb  test-chatbot-config-ollama.hjson  test-chatbot-config.hjson  test-models.ipynb
docs/: configuration.md  index.html  index.md  installation.md  quickstart.md  test-script.md  usage.md
docs/llms_wrapper/: config.html  index.html  llms.html  llms_wrapper_test.html  log.html  logging.html  model_list.html  utils.html  version.html
docs/pythondoc/llms_wrapper/: config.html  llms_wrapper_test.html
llms_wrapper/: __init__.py  chatbot.py  config.py  cost_logger.py  llms.py  llms_wrapper_llminfo.py  llms_wrapper_test.py  llms_wrapper_webchat.py  logging.py  utils.py  version.py
notebooks/: dev-tooling.ipynb  example-config1.hjson  example-config2.hjson  test-api.ipynb  test-files.ipynb  test-models.ipynb  test-streaming.ipynb  test-tooling.ipynb  test-via-streaming.ipynb
notes/: using-mcp.md  web-search-01.md
